<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="registerKhVM" type="com.chhurngsapplication.app.modules.registerkh.data.viewmodel.RegisterKhVM"/>
    </data>
    <LinearLayout android:gravity="start"
        android:id="@+id/linearRegisterKH"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylewhite_A700">
        <ImageView android:id="@+id/imageGroup189"
            android:layout_gravity="center_horizontal"
            android:layout_height="@dimen/_50pxh"
            android:layout_marginEnd="@dimen/_24pxh"
            android:layout_marginStart="@dimen/_24pxh"
            android:layout_marginTop="@dimen/_41pxv"
            android:layout_width="@dimen/_78pxh"
            android:scaleType="fitXY"
            android:src="@drawable/img_group189_black_900"
            tools:ignore="ContentDescription" tools:src="@drawable/img_group189_black_900"/>
        <TextView android:ellipsize="end" android:id="@+id/txtOne"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_24pxh"
            android:layout_marginStart="@dimen/_24pxh"
            android:layout_marginTop="@dimen/_37pxv"
            android:layout_width="wrap_content"
            android:lineSpacingExtra="@dimen/_21pxh"
            android:singleLine="true"
            android:text="@{registerKhVM.registerKhModel.txtOne}"
            style="@style/txtContentbold25" tools:text="@string/lbl"/>
        <TextView android:ellipsize="end" android:id="@+id/txtTwo"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_24pxh"
            android:layout_marginStart="@dimen/_24pxh"
            android:layout_marginTop="@dimen/_5pxv"
            android:layout_width="match_parent"
            android:lineSpacingExtra="@dimen/_11pxh"
            android:singleLine="true"
            android:text="@{registerKhVM.registerKhModel.txtTwo}"
            style="@style/txtContent13" tools:text="@string/msg"/>
        <EditText
            android:background="@drawable/rectangle_bg_white_a700_border_gray_200_radius_8"
            android:ellipsize="end" android:hint="@string/lbl2"
            android:id="@+id/etGroupThirtyThree"
            android:inputType="text"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_24pxh"
            android:layout_marginStart="@dimen/_24pxh"
            android:layout_marginTop="@dimen/_25pxv"
            android:layout_width="match_parent"
            android:lineSpacingExtra="@dimen/_14pxh"
            android:paddingBottom="@dimen/_9pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_16pxh"
            android:paddingTop="@dimen/_9pxv" android:singleLine="true"
            android:text="@={registerKhVM.registerKhModel.etGroupThirtyThreeValue}"
            android:textColorHint="@color/bluegray_500"
            style="@style/etSolidRoundedOutline" tools:ignore="Autofill"/>
        <EditText
            android:background="@drawable/rectangle_bg_white_a700_border_gray_200_radius_8"
            android:drawableEnd="@drawable/img_eye"
            android:drawablePadding="@dimen/_30pxh"
            android:ellipsize="end" android:hint="@string/lbl3"
            android:id="@+id/etGroupThirtyFour" android:inputType="text"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_24pxh"
            android:layout_marginStart="@dimen/_24pxh"
            android:layout_marginTop="@dimen/_19pxv"
            android:layout_width="match_parent"
            android:letterSpacing="0.03"
            android:lineSpacingExtra="@dimen/_14pxh"
            android:paddingBottom="@dimen/_8pxv"
            android:paddingEnd="@dimen/_25pxh"
            android:paddingStart="@dimen/_16pxh"
            android:paddingTop="@dimen/_10pxv" android:singleLine="true"
            android:text="@={registerKhVM.registerKhModel.etGroupThirtyFourValue}"
            android:textColorHint="@color/bluegray_500"
            style="@style/etSolidRoundedOutline" tools:ignore="Autofill"/>
        <androidx.appcompat.widget.AppCompatButton
            android:ellipsize="end" android:gravity="center"
            android:id="@+id/btn" android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_24pxh"
            android:layout_marginStart="@dimen/_24pxh"
            android:layout_marginTop="@dimen/_221pxv"
            android:layout_width="match_parent"
            android:lineSpacingExtra="@dimen/_14pxh"
            android:paddingBottom="@dimen/_5pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_30pxh"
            android:paddingTop="@dimen/_5pxv" android:singleLine="true"
            android:text="@string/lbl4" android:textAllCaps="false"
            style="@style/btnSolidRounded" tools:text="@string/lbl4"/>
        <LinearLayout android:gravity="start" android:id="@+id/linearOr"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_24pxh"
            android:layout_marginStart="@dimen/_24pxh"
            android:layout_marginTop="@dimen/_13pxv"
            android:layout_width="match_parent" android:orientation="horizontal">
            <View android:background="@color/gray_300"
                android:id="@+id/lineLineEleven"
                android:layout_height="@dimen/_1pxv"
                android:layout_marginBottom="@dimen/_8pxv"
                android:layout_marginTop="@dimen/_10pxv"
                android:layout_weight="0.47" android:layout_width="0dp"/>
            <TextView android:ellipsize="end" android:id="@+id/txtOr"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_11pxh"
                android:layout_weight="0.05" android:layout_width="0dp"
                android:lineSpacingExtra="@dimen/_6pxh"
                android:singleLine="true"
                android:text="@{registerKhVM.registerKhModel.txtOr}"
                style="@style/txtManropemedium14" tools:text="@string/lbl_or"/>
            <View android:background="@color/gray_300"
                android:id="@+id/lineLineTwelve"
                android:layout_height="@dimen/_1pxv"
                android:layout_marginBottom="@dimen/_8pxv"
                android:layout_marginStart="@dimen/_11pxh"
                android:layout_marginTop="@dimen/_10pxv"
                android:layout_weight="0.47" android:layout_width="0dp"/>
        </LinearLayout>
        <LinearLayout android:gravity="center_vertical"
            android:id="@+id/linearButton"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_24pxh"
            android:layout_marginStart="@dimen/_24pxh"
            android:layout_marginTop="@dimen/_14pxv"
            android:layout_width="match_parent"
            android:orientation="horizontal" style="@style/groupStyleblack_900cornerRadius">
            <ImageView android:id="@+id/imageGmailTwo"
                android:layout_height="@dimen/_21pxh"
                android:layout_marginBottom="@dimen/_13pxv"
                android:layout_marginStart="@dimen/_70pxh"
                android:layout_marginTop="@dimen/_13pxv"
                android:layout_width="@dimen/_21pxh"
                android:scaleType="fitXY"
                android:src="@drawable/img_gmail2"
                tools:ignore="ContentDescription" tools:src="@drawable/img_gmail2"/>
            <TextView android:ellipsize="end"
                android:id="@+id/txtGoogle"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_8pxv"
                android:layout_marginEnd="@dimen/_102pxh"
                android:layout_marginStart="@dimen/_8pxh"
                android:layout_marginTop="@dimen/_10pxv"
                android:layout_weight="0.86" android:layout_width="0dp"
                android:lineSpacingExtra="@dimen/_13pxh"
                android:singleLine="true"
                android:text="@{registerKhVM.registerKhModel.txtGoogle}"
                style="@style/txtContentbold15" tools:text="@string/lbl_google"/>
        </LinearLayout>
        <LinearLayout android:gravity="center_vertical"
            android:id="@+id/linearLanguageVarian"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_35pxv"
            android:layout_marginEnd="@dimen/_24pxh"
            android:layout_marginStart="@dimen/_24pxh"
            android:layout_marginTop="@dimen/_50pxv"
            android:layout_width="wrap_content"
            android:orientation="horizontal" style="@style/groupStylegray_100cornerRadius">
            <TextView android:ellipsize="end"
                android:id="@+id/txtChangetoEN"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_8pxv"
                android:layout_marginStart="@dimen/_8pxh"
                android:layout_marginTop="@dimen/_12pxv"
                android:layout_weight="0.77" android:layout_width="0dp"
                android:singleLine="true"
                android:text="@{registerKhVM.registerKhModel.txtChangetoEN}"
                style="@style/txtPoppinsregular15" tools:text="@string/lbl_change_to_en"/>
            <FrameLayout android:id="@+id/frameKHFlag"
                android:layout_height="@dimen/_29pxv"
                android:layout_marginBottom="@dimen/_7pxv"
                android:layout_marginEnd="@dimen/_9pxh"
                android:layout_marginStart="@dimen/_2pxh"
                android:layout_marginTop="@dimen/_8pxv" android:layout_width="@dimen/_29pxh">
                <ImageView android:id="@+id/image1200pxFlagof"
                    android:layout_gravity="start"
                    android:layout_height="@dimen/_29pxh"
                    android:layout_width="@dimen/_29pxh"
                    android:scaleType="centerCrop" circular="@{true}"
                    imageRes="@{@drawable/img_1200pxflagof}"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_1200pxflagof"/>
                <View
                    android:background="@drawable/rectangle_bg_gray_200_44_radius_14_5"
                    android:id="@+id/viewEllipseThree"
                    android:layout_gravity="start"
                    android:layout_height="@dimen/_29pxh" android:layout_width="@dimen/_29pxh"/>
            </FrameLayout>
        </LinearLayout>
    </LinearLayout>
</layout>
